实验九:完成，该章节主要是springboot整合thymeleaf

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--        exp8::整合thymeleaf-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <!--        其他-->
 
         <!--        lombok依赖-->
