--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,3 +58,13 @@ mybatis:
     map-underscore-to-camel-case: true # enable camel case
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.demo.exp_six.domain
+
+
+  #exp12
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+#      enabled: true
+#      file-size-threshold: 0
+#      location: /tmp
